# PMMA

./: .gitattributes  .gitignore  .readthedocs.yml  CMakeLists.txt  LICENSE.md  MANIFEST.in  MODULE_MAKER.py  Perlin_utils.py  README.md  __init__.py  build_deps.py  build_pmma.py  c_setup.py  canvas.py  constants.py  core.py  core_setup.py  deps_build_cmds.py  deps_build_manager.py  deps_utils.py  dump.txt  events.py  hashes.json  main.py  math_utils.py  noise.py  noise_utils.py  notes.txt  pmma_utils.py  pyproject.toml  recorder.py  registry.py  requirements.txt  setup.py  statistics_report.md  temp_events_list.txt  testing report.md  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature-improvement.md  feature_request.md
.github/workflows/: build_dependencies.yml  documentation_builder.yml  manylinux_test.yml  manylinuxtest.yml  mirror_to_distributables.yml  publish.yml  release.yml  release_python_package_to_pypi.yml  wintest.yml
build_tools/: MODULE_MAKER.py  README.md  build_deps.py  build_pmma.py  deps_build_cmds.py  deps_build_manager.py  deps_utils.py  git_extensions.py  git_utils.py  hashes.json  main - debug.py  main.py  notes.txt  utils.py  workflow_integration.py
build_tools/cmake/: CMakeLists.txt  fix_libdirs.cmake
build_tools/cmake - debug/: CMakeLists.txt
build_tools/cmake - debug/3_build_extern/: CMakeLists.txt
build_tools/cmake - debug/4_build_core/: CMakeLists.txt
build_tools/cmake/1_build_deps_first_pass/: CMakeLists.txt
build_tools/cmake/2_build_deps_second_pass/: CMakeLists.txt
build_tools/cmake/3_build_extern/: CMakeLists.txt
build_tools/cmake/4_build_core/: CMakeLists.txt
build_tools/cmake/dependencies/bgfx/: CMakeLists.txt
build_tools/cmake/dependencies/bgfx - debug/: CMakeLists.txt
build_tools/cmake/dependencies/freetype/: CMakeLists.txt
build_tools/cmake/dependencies/glfw/: CMakeLists.txt
build_tools/cmake/dependencies/harfbuzz/: CMakeLists.txt
build_tools/cmake/dependencies/libpng/: CMakeLists.txt
build_tools/cmake/dependencies/zlib/: CMakeLists.txt
build_tools/cmake/pmma/: CMakeLists.txt
build_tools/old/cmake/2_build_deps_second_pass/: CMakeLists.txt
build_tools/old/cmake/3_build_extern/: CMakeLists.txt
c_src/utility/: 1D perlin noise.c  2D perlin noise.c
cmake/pmma/: CMakeLists.txt
cython_src/utility/: extended_perlin_noise.c  extended_perlin_noise.pyx  laminator.c  laminator.pyx  math_utils.pyx  number_converter.c  number_converter.pyx  parallel_executor.c  parallel_executor.pyx  perlin_noise.c  perlin_noise.pyx  pipeline_threads_ml.cpp  pipeline_threads_ml.pyx  render_pipeline_manager_utils.pyx  render_pipeline_utils.pyx
data files/: events.json
development helper functions/: pmma line counter.py
development_tools/: InternalColorGuide.txt  InternalLogging_ID_Map.txt  notes.txt  pmma line counter.py
development_tools/tests/: main.py
docs/: advtkinter.rst  conf.py  core.rst  file.rst  general.rst  index.rst  library_breakdown.rst  requirements.txt  surface.rst  text.rst  video.rst
docs/advmath/: index.rst
docs/advthreading/: index.rst
docs/advtkinter/: index.rst
docs/audio/: index.rst
docs/canvas/: index.rst
docs/color/: index.rst
docs/constants/: index.rst
docs/coordinate/: index.rst
docs/core/: index.rst
docs/display/: index.rst
documentation/: .readthedocs.yaml
documentation autobuilder/: main.py  script.py
documentation_autobuilder/: main.py  og.py  temp.py
experiments/: 1D_perlin_noise_test.py  audio playback test.py  compiling test.py  controller test.py  draw test.py  drawing test.py  events test.py  generic loop test.py  generic test.py  gpu interface test.py  graphics test.py  image generation.py  its time to fix this madness.py  lamination test.py  memory management test 2.py  memory_lifetime test.py  memory_manager_test.py  number conversion test.py  osi.py  particles render test.py  passport test.py  perlin array test.py  perlin noise test.py  perlin speed test.py  pmma manipulator.py  pmma startup test.py  pmma video playback test.py  quick start test.py  render 2d using opengl.py  render pipeline (with leak detection).py  render pipeline.py  render pipline with profile.py  reverb test.py  sampler.py  shape quality test.py  shapes.c  shapes.cp310-win_amd64.pyd  text test.py  transition test.py  transparency test.py  (+1 more)
pmma/: README.md  __init__.py  c_setup.py  requirements.txt
py_src/: advmath.py  advtkinter.py  color.py  constants.py  coordinate.py  core.py  display.py  draw.py  events.py  file.py  general.py  noise.py  optimizer.py  passport.py  recorder.py  registry.py  text.py
python_src/: advmath.py  advthreading.py  advtkinter.py  audio.py  backpack.py  camera.py  color.py  complex_shapes_2D.py  compute_pipeline.py  constants.py  controller.py  coordinate.py  core.py  data_structures.py  display.py  draw.py  events.py  executor.py  file.py  formatters.py  general.py  glsl.py  gpu.py  gpu_distribution.py  helper_functions.py  image.py  logging.py  memory_manager.py  noise.py  number_converter.py  old_draw TEMPORARY.py  opengl.py  operating_system_interface.py  optimizer.py  passport.py  projection.py  quickstart.py  recorder.py  registry.py  render_pipeline.py  (+11 more)
repo/: DevelopmentProgress.md
repository/: DevelopmentProgress.md  Roadmap.md  statistics_report.md
repository data/: memory comparison.drawio
src/: advmath.py  advtkinter.py  canvas.py  color.py  constants.py  coordinate.py  core.py  display.py  draw.py  events.py  general.py  noise.py  optimizer.py  recorder.py  registry.py  registry_utils.py  text.py  tmp.lua  tmp.lua2
temp_docs/: index.rst
tests/: 1D_perlin_noise_test.py  ML_Test.py  basic_display_test.py  batch.py  better 1D.py  bouncy_ball_test.py  compute_module.py  compute_pipeline advanced.py  demo.py  demo_pmma_class_core.py  generic_test.py  graphics test 2.py  main.py  module caller test.py  opengl rendering performance test.py  perlin array test.py  perlin range test.py  perlin_noise_test.py  pipeline test.py  pygame rendering performance test.py  recording_test.py  setup.py  shapes.c  shapes.pyx  test.py  text test.py
(+588 files in other folders)
